[package]
name = "wordninja_rs_lua"
version = "0.1.0"
authors = ["BlindingDark <blindingdark@outlook.com>"]
description = "Wordninja lua native module."
edition = "2018"
repository = "https://github.com/BlindingDark/wordninja-rs-lua"
homepage = "https://github.com/BlindingDark/wordninja-rs-lua"
license = "MIT"
categories = ["algorithms", "lua", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# 为每个 Lua 版本都增加 vendored 支持，确保静态编译
lua54 = ["mlua/lua54", "mlua/vendored"]
lua53 = ["mlua/lua53", "mlua/vendored"]
lua52 = ["mlua/lua52", "mlua/vendored"]
lua51 = ["mlua/lua51", "mlua/vendored"]
luajit = ["mlua/luajit", "mlua/vendored"]

[dependencies]
wordninja = "0.1"
# 保持 version 0.10，并确保开启了 module 模式
mlua = { version = "0.10", features = ["module"] }

[lib]
crate-type = ["cdylib"]
