[package]
name = "wordninja_rs_lua"
version = "0.1.0"
authors = ["BlindingDark <blindingdark@outlook.com>"]
edition = "2018"
license = "MIT"

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]

[dependencies]
wordninja = "0.1"
mlua = { version = "0.10", features = ["module"] }

[lib]
crate-type = ["cdylib"]
